examples/fail/type_mismatch.uplp
-- test: fail { "category": "Type.mismatch" }
1 + ()